src/objects/Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Region_Hidden__c</fullName>
        <description>Field used for workflow rule that shows different Picklist values based on Marketing Plan.</description>
        <label>Division Hidden</label>
        <picklist>
            <picklistValues>
                <fullName>Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Coast Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Control Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mideast Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midsouth Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation &amp; Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Coast Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Control Division</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region inherited from parent Marketing Plan.</description>
        <formula>text (ParentMarketingPlan__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Focus Calendar Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Focus Calendar Local Priority, Focus Calendar National Priority</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>BI Child Campaigns</relationshipLabel>
        <relationshipName>BICampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestStatus__c</fullName>
        <description>Field used to view the current status of the IO generation.</description>
        <inlineHelpText>Field used to view the current status of the IO generation.</inlineHelpText>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>IO Not Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IO Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Status_Message__c</fullName>
        <label>IO Status Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Company_Code__c</fullName>
        <formula>ParentMarketingPlan__r.SAP_Company_Code__c</formula>
        <label>SAP Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Controlling_Area__c</fullName>
        <formula>ParentMarketingPlan__r.SAP_Controlling_Area__c</formula>
        <label>SAP Controlling Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cost_Center__c</fullName>
        <formula>ParentMarketingPlan__r.SAP_Cost_Center__c</formula>
        <label>SAP Cost Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy(JTBD)</label>
        <picklist>
            <controllingField>CampaignBrand__c</controllingField>
            <picklistValues>
                <fullName>Acquire Lda Millennials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Top Of Mind Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communicate Authenticity &amp; Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive 901 Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Awareness (Off)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Brand Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Consideration &amp; Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Sauza Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Successful Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive The On-Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive The On-Premise (Basil Hayden)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Establish Belief In Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand Distribution (Off)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get Millennial Males To Consider Jim Beam Again</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow Distribution On Plata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow Pinnacle Original</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow Wine And Vodka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implement Join The Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Awareness And Relevance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interrupt Bacardi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make 901 Accessible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Pinnacle Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One More Drink Per Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premiumize And Trade Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruit Consumers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruit Consumers From Outside Beam/Bourbon Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruit New Consumers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruit “Whiskey Women”</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reestablish Sauza Brand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>ParentMarketingPlan__r.Territory__r.Name</formula>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnforecastedCampaignBudget__c</fullName>
        <description>Campaign Budget - Forecasted Campaign Budget.</description>
        <formula>PlannedCampaignSpend__c  - ForecastedCampaignSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Campaign Budget - Forecasted Campaign Budget.</inlineHelpText>
        <label>Unforecasted Campaign Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>per discussion with Mia, John, Jeff, Jody, Neil on 1/29 we are hiding this value for now.  We will re-visit the creation of a lookup or picklist for preferred vendors.</description>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>text (ParentMarketingPlan__r.Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Brand_Quality__c</columns>
        <columns>PlannedCampaignSpend__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>CommittedCampaignSpend__c</columns>
        <columns>ActualCampaignSpend__c</columns>
        <columns>IOCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllCampaigns2015</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Brand_Quality__c</columns>
        <columns>PlannedCampaignSpend__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>CommittedCampaignSpend__c</columns>
        <columns>ActualCampaignSpend__c</columns>
        <columns>IOCode__c</columns>
        <columns>RequestStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>All Campaigns 2015</label>
    </listViews>
    <listViews>
        <fullName>AllCampaigns2016</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Brand_Quality__c</columns>
        <columns>PlannedCampaignSpend__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>CommittedCampaignSpend__c</columns>
        <columns>ActualCampaignSpend__c</columns>
        <columns>IOCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>All Campaigns 2016</label>
    </listViews>
    <listViews>
        <fullName>All_IOs_Request_Status_is_IO_Pending</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Brand_Quality__c</columns>
        <columns>PlannedCampaignSpend__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>CommittedCampaignSpend__c</columns>
        <columns>ActualCampaignSpend__c</columns>
        <columns>IOCode__c</columns>
        <columns>RequestStatus__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RequestStatus__c</field>
            <operation>equals</operation>
            <value>IO Pending</value>
        </filters>
        <label>All IOs Request Status is IO Pending</label>
        <sharedTo>
            <role>Application_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCampaigns2015</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Brand_Quality__c</columns>
        <columns>PlannedCampaignSpend__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>CommittedCampaignSpend__c</columns>
        <columns>ActualCampaignSpend__c</columns>
        <columns>IOCode__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>My Campaigns 2015</label>
    </listViews>
    <listViews>
        <fullName>MyCampaigns2016</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Brand_Quality__c</columns>
        <columns>PlannedCampaignSpend__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>CommittedCampaignSpend__c</columns>
        <columns>ActualCampaignSpend__c</columns>
        <columns>IOCode__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>My Campaigns 2016</label>
    </listViews>
    <listViews>
        <fullName>National_Accounts_Off_Premise_Campaigns</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Brand_Quality__c</columns>
        <columns>PlannedCampaignSpend__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>CommittedCampaignSpend__c</columns>
        <columns>ActualCampaignSpend__c</columns>
        <columns>InitialStartDate__c</columns>
        <columns>InitialEndDate__c</columns>
        <columns>IOCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>equals</operation>
            <value>NA Off-Premise</value>
        </filters>
        <label>National Accounts Off-Premise Campaigns</label>
    </listViews>
    <listViews>
        <fullName>National_Marketing_Cam</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Brand_Quality__c</columns>
        <columns>PlannedCampaignSpend__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>CommittedCampaignSpend__c</columns>
        <columns>ActualCampaignSpend__c</columns>
        <columns>InitialStartDate__c</columns>
        <columns>InitialEndDate__c</columns>
        <columns>IOCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>equals</operation>
            <value>National Marketing</value>
        </filters>
        <label>National Marketing Campaigns 2015</label>
    </listViews>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <recordTypes>
        <fullName>Initial_Campaign_Creation</fullName>
        <active>true</active>
        <description>Used for Creation of a Campaign</description>
        <label>Initial Campaign Creation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CampaignAttributesRequired</fullName>
        <active>true</active>
        <description>This validation rule is required to enforce the picklist field requiredness on the custom VF page(grid).</description>
        <errorConditionFormula>ISBLANK(Name) ||
ISBLANK(TEXT(CampaignType__c)) || 
ISBLANK(TEXT(GLAccountType__c)) || 
ISBLANK(TEXT(GLDescription__c)) || 
ISBLANK(TEXT(GLCode__c))</errorConditionFormula>
        <errorMessage>Campaign Name. Campaign Type. GL Account Type. GL Description. GL Code must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CampaignBudgetCannotbeLessThanZero</fullName>
        <active>true</active>
        <description>Campaign Budget cannot be less than zero dollars.</description>
        <errorConditionFormula>PlannedCampaignSpend__c &lt; 0</errorConditionFormula>
        <errorDisplayField>PlannedCampaignSpend__c</errorDisplayField>
        <errorMessage>Campaign Budget cannot be less than zero dollars. Please update the Campaign Budget field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CampaignCreatedInPriorYear</fullName>
        <active>false</active>
        <description>Campaigns cannot be created if the Master Marketing Plan is associated with a previous Year</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;System Administrator with Bulk Hard Delete&quot;, 
VALUE(( Year__c )) &lt; YEAR( TODAY() ))</errorConditionFormula>
        <errorMessage>Campaigns cannot be created if the Master Marketing Plan is associated with a previous Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CampaignCurrencyMustEqualMP</fullName>
        <active>false</active>
        <description>Campaign Currency must equal Marketing Plan Currency.</description>
        <errorConditionFormula>text(CurrencyIsoCode)  &lt;&gt;  text(ParentMarketingPlan__r.CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Campaign Currency does not equal Marketing Plan Currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_BQ_match_MP_B</fullName>
        <active>true</active>
        <description>Campaign Brand Quality must be consistent with the Brand associated with the Parent Marketing Plan.</description>
        <errorConditionFormula>Brand_Quality__r.Brand__c &lt;&gt;  ParentMarketingPlan__r.Brand__c</errorConditionFormula>
        <errorDisplayField>Brand_Quality__c</errorDisplayField>
        <errorMessage>Brand Quality is not consistent with the Brand associated with this Marketing Plan. Please enter an appropriate Brand Quality value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Date_Validation</fullName>
        <active>true</active>
        <description>Campaign Start Date must be less than End Date.</description>
        <errorConditionFormula>InitialStartDate__c   &gt;   InitialEndDate__c</errorConditionFormula>
        <errorDisplayField>InitialStartDate__c</errorDisplayField>
        <errorMessage>Start Date must be prior or equal to End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CampaignsOnlyCreatedwithMPCampaignRT</fullName>
        <active>true</active>
        <description>Campaigns can only be created if the Master Marketing Plan has a record type containing &apos;Campaigns Allowed&apos;.</description>
        <errorConditionFormula>AND(ParentMarketingPlan__r.RecordType.Name &lt;&gt; &quot;Campaigns Allowed - Not Editable&quot;, ParentMarketingPlan__r.RecordType.Name  &lt;&gt; &quot;Campaigns Allowed - Editable&quot;)</errorConditionFormula>
        <errorMessage>Campaigns can only be created if the Master Marketing Plan record type allows for Campaigns. Please select another Marketing Plan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_Required_for_Budget_Update</fullName>
        <active>true</active>
        <description>If the Campaign Budget is changed, the user must enter a comment as to why.</description>
        <errorConditionFormula>and(ischanged( PlannedCampaignSpend__c ),isblank( Comments__c ))</errorConditionFormula>
        <errorMessage>A Comment is required when changing a Campaign Budget value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Year_Match_Parent</fullName>
        <active>true</active>
        <description>End Date Year must match the Parent Marketing Plan.</description>
        <errorConditionFormula>text(ParentMarketingPlan__r.Year__c )  &lt;&gt;  text(YEAR( InitialEndDate__c ))</errorConditionFormula>
        <errorDisplayField>InitialEndDate__c</errorDisplayField>
        <errorMessage>End Date Year must match the Parent Marketing Plan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Forecasted_Amount_must_be_LE_Budget</fullName>
        <active>false</active>
        <errorConditionFormula>ForecastedCampaignSpend__c &gt;  PlannedCampaignSpend__c</errorConditionFormula>
        <errorMessage>You cannot Forecast more than the Campaign Budget.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IOCodeCannotBeCreatedinPriorYearPlan</fullName>
        <active>true</active>
        <description>IO Codes cannot be created for a Campaigns if the Master Marketing Plan is associated with a previous Year</description>
        <errorConditionFormula>AND( 
ISCHANGED( IOCode__c), 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;System Administrator with Bulk Hard Delete&quot;, 
VALUE(( Year__c )) &lt; YEAR( TODAY() ))</errorConditionFormula>
        <errorMessage>IO Codes cannot be created for a Campaigns if the Master Marketing Plan is associated with a previous Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Year_Match_Parent</fullName>
        <active>true</active>
        <description>Start Date Year must match the Parent Marketing Plan.</description>
        <errorConditionFormula>text(ParentMarketingPlan__r.Year__c )  &lt;&gt;  text(YEAR( InitialStartDate__c ))</errorConditionFormula>
        <errorDisplayField>InitialStartDate__c</errorDisplayField>
        <errorMessage>Start Date Year must match the Parent Marketing Plan.</errorMessage>
    </validationRules>
</CustomObject>